Changelog for Zodiac

Version 1.1.2 Changes:
- Fixed mirror-modes having an affect while loading a stored Zodiac galaxy, changing the loaded result

Version 1.1.1 Changes:
- Fixed a rounding issue that could result in some Wormholes in 1.0 galaxies not being loaded correctly
- Added an ingame warning popup when trying to start with the wrong galaxy size setting
- Added a single letter after the saveslot number in the launcher to indicate the size of the galaxy (S, M, L, C or H)

Version 1.1 Changes:
- Added a support-grid with customizable resolution in parsecs (decimal numbers allowed); also added snap-to-grid toggle
- Star colors can now be customized, the color is indicated by a smaller circle in the middle of the system. However:
  Due to technical limitations, this is purely cosmetic, meaning the planets are randomly generated on a random star
  color! This will likely still be improved in a later version of Zodiac, so that the new color is taken into account
- Added four more mirror-placement-modes (slash, backslash, center, at-system) which can be combined with the previous
  mirror-placement-modes, allowing you to place up to 16 systems symmetrically with a single click; systems that end up
  outside of the galaxy will not be placed (this can happen because the galaxy has a rectangular shape but not a
  quadratic one)
- You can now edit the color and type of the currently selected system
- Right-clicking empty space will now cancel the current selection
- Added diagonal crosshair to better support mirror-placement-modes
- 'Large / Cluster' Galaxies are now separated into Large and Cluster. Cluster is the same size as large but allows for
  71 star systems instead of 54
- Cosmetic changes: various color changes, shortened some range indicator descriptions, adjusted layout
- Established a small minimum distance to other systems when placing new ones in order to prevent accidentally placing